force-app/main/default/objects/IntegrationSettingCRMToZkipster__mdt.object
<CustomObject>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntegrationSettingCRMToZkipster</label>
    <pluralLabel>IntegrationSettingsCRMToZkipster</pluralLabel>
</CustomObject>